changed background color settings

--- a/kitty.conf
+++ b/kitty.conf
@@ -1465,7 +1465,7 @@ tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{tab.l
 #: Color scheme {{{
 
 # foreground #dddddd
-# background #000000
+background #080899
 
 #: The foreground and background colors.
 
@@ -1709,7 +1709,7 @@ background_blur 1
 #: background processes still using the terminal can fail silently
 #: because their stdout/stderr/stdin no longer work.
 
-# remote_control_password
+# remote_control_password "change spacing" set-spacing
 
 #: Allow other programs to control kitty using passwords. This option
 #: can be specified multiple times to add multiple passwords. If no
@@ -1744,7 +1744,7 @@ background_blur 1
 #: See rc_custom_auth <https://sw.kovidgoyal.net/kitty/remote-
 #: control/#rc-custom-auth> for details.
 
-# allow_remote_control no
+# allow_remote_control password
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
